--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
   cloud_firestore: ^2.2.1
+  google_sign_in: ^5.0.4
+  flutter_login_facebook: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
