--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cloud_firestore: ^2.2.1
   google_sign_in: ^5.0.4
   flutter_login_facebook: ^1.0.1
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
