--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
+  firebase_storage: ^8.1.3 
   cloud_firestore: ^2.2.1
   google_sign_in: ^5.0.4
   flutter_login_facebook: ^1.0.1
